2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/38_convfloat_assign.deca
// Description :
//     Test sur convfloat avec afféctation  
// Resultats :
//    Valide 
//
// Historique :
// cree le 12/01/2024

{
    float f ;
    f = 2 ;
}