2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/13_assign_lvalue_non_declare.deca
// Description :
//      affcetation dans une varibale non déclarée 
// Resultats :
//    Erreur Contexteulle : fichier.deca:10:4:x identificateur non déclaré
//
// Historique :
// cree le 10/01/2024

{
    x = 2 ;

}